[BE] 핀 기능 관련 테스트 구현 (#75)
* chore: 초기 환경 설정

* feat: 토픽, 핀에 대한 Entity 및 뼈대코드 작성

Co-authored-by: yoondgu <doyoungwork@gmail.com>
Co-authored-by: cpot5620 <cpot5620@gmail.com>
Co-authored-by: junpakPark <junpak.park@gmail.com>

* refactor: Getter 추가 및, Coordinate BaseEntity 상속 제거

Co-authored-by: yoondgu <doyoungwork@gmail.com>
Co-authored-by: cpot5620 <cpot5620@gmail.com>
Co-authored-by: junpakPark <junpak.park@gmail.com>

* refactor: 외래키에 Not Null 조건 추가

Co-authored-by: yoondgu <doyoungwork@gmail.com>
Co-authored-by: cpot5620 <cpot5620@gmail.com>
Co-authored-by: junpakPark <junpak.park@gmail.com>

* feat: Repository 추가

Co-authored-by: yoondgu <doyoungwork@gmail.com>
Co-authored-by: cpot5620 <cpot5620@gmail.com>
Co-authored-by: junpakPark <junpak.park@gmail.com>

* chore: gradlew 업데이트

Co-authored-by: yoondgu <doyoungwork@gmail.com>
Co-authored-by: cpot5620 <cpot5620@gmail.com>
Co-authored-by: junpakPark <junpak.park@gmail.com>

* refactor: Entity 구조 변경

Co-authored-by: yoondgu <doyoungwork@gmail.com>
Co-authored-by: cpot5620 <cpot5620@gmail.com>
Co-authored-by: junpakPark <junpak.park@gmail.com>

* test: PinRepository 테스트 구현

Co-authored-by: kpeel5839 <jakind@naver.com>

* refactor: 디미터 법칙 적용

Co-authored-by: kpeel5839 <jakind@naver.com>

* refactor: PinCreateRequest 변수 순서 변경

Co-authored-by: kpeel5839 <jakind@naver.com>

* test: PinService 핀 생성 테스트 구현

Co-authored-by: kpeel5839 <jakind@naver.com>

* test: PinService 핀 수정 및 삭제 테스트 구현

Co-authored-by: kpeel5839 <jakind@naver.com>

* refactor: 개행 조정 및 접근 제어자 조정

* test: 핀 목록 조회 서비스 기능 테스트

* test: 핀 단일 조회 서비스 테스트

* test: Pin Entity Validation 테스트

---------

Co-authored-by: jaeyeon kim <jakind@naver.com>
Co-authored-by: yoondgu <doyoungwork@gmail.com>
Co-authored-by: junpakPark <junpak.park@gmail.com>
Co-authored-by: kpeel5839 <89840550+kpeel5839@users.noreply.github.com>